* CHANGES IN dplR VERSION 1.6.1

File: NAMESPACE
---------------

- Added rasterPlot, latexify() and latexDate() to export list
- Import readPNG from png.
- Import more functions from grid.

File: DESCRIPTION
-----------------

- New Suggested packages: Biobase, dichromat, knitr, tikzDevice,
  RColorBrewer. Of these, dichromat, knitr, and tikzDevice are for document
  building (see math-dplR.pdf below).  Biobase is for making access to
  math-dplR.pdf easier with openPDF().  RColorBrewer provides an
  alternative palette to an example in wavelet.plot.Rd.

- New Imported package: png.

File: chron.R
-------------

- Added pass-through of arguments from chron() to ar()

Files: corr.rwl.seg.R, corr.series.seg.R, interseries.cor.R,
       rwi.stats.running.R, xskel.ccf.plot.R, xskel.plot.R
------------------------------------------------------------

- Parameters not changed by assignment anymore (small technical detail)

File: common.interval.R
-----------------------

- Bug fix: make.plot=TRUE threw an error when input data.frame had leading
  or trailing all-NA rows

File: corr.rwl.seg.R, skel.plot.R
---------------------------------

- Performance optimization, including the use of dev.hold() and dev.flush()

File: corr.series.seg.R
-----------------------

- Bug fix: Argument 'method' was not used for moving correlations.
  Instead, the method used was always "spearman".

File: detrend.R
---------------

- Updated .export of foreach() to match previous changes to the loop body

File: latexify.R
----------------

- New utility functions latexify() and latexDate() for use in vignettes

New files in subdirectory inst/doc:
-----------------------------------

- math-dplR.pdf is a vignette-ish document about the mathematical details
  of some dplR functions (room for expansion in the future).  It is
  packaged as a static PDF due to the long build time.  However, the
  source is available as required by the CRAN policies for an open