@@ -22,10 +22,13 @@ latexify(x, doublebackslash = TRUE)
 
   The function is intended for use with unformatted inline text.
   Newlines, tabs and other whitespace characters (\code{"[:space:]"} in
-  \link{regex}) are converted to spaces.  Control character
+  \link{regex}) are converted to spaces.  Control characters
   (\code{"[:cntrl:]"}) that are not whitespace are removed.  Other
-  special characters are {, }, \, #, $, \%, ^, &, _, ~, \" and /.  They
-  are converted to the corresponding LaTeX commands.
+  special characters are \sQuote{\{}, \sQuote{\}}, \sQuote{\\},
+  \sQuote{#}, \sQuote{$}, \sQuote{\%}, \sQuote{^}, \sQuote{&},
+  \sQuote{_}, \sQuote{~},
+  \sQuote{"}, and \sQuote{/}.
+  They are converted to the corresponding LaTeX commands.
 
   Before applying the substitutions described above, input elements with
   \code{Encoding} set to \code{"bytes"} are printed and the result is
@@ -35,12 +38,11 @@ latexify(x, doublebackslash = TRUE)
   This set includes tabs, newlines and control characters.  The
   substitutions are then applied to the intermediate result.
 
-  Input elements with \code{"unknown"} encoding are assumed to be in the
-  current encoding.  These and \code{"latin1"} encoded elements are
-  converted to UTF-8.
+  The result is converted to UTF-8 encoding, Normalization Form C
+  (NFC).
 
-  Suggested package loading commands in the document preamble
-  are:\preformatted{\usepackage[T1]{fontenc}    \% required for "
+  Assuming that \samp{pdflatex} is used for compilation, suggested
+  package loading commands in the document preamble are: \preformatted{\usepackage[T1]{fontenc}    \% required for "
 \usepackage[utf8]{inputenx} \% UTF-8 input encoding
 \input{ix-utf8enc.dfu}      \% more supported characters} 
   
@@ -51,6 +53,8 @@ latexify(x, doublebackslash = TRUE)
 \references{
   Pakin, S. (2009) The Comprehensive LaTeX Symbol
   List. \url{http://www.ctan.org/tex-archive/info/symbols/comprehensive}
+
+  The Unicode Consortium. The Unicode Standard. \url{http://www.unicode.org/versions/latest/}
 }
 \author{
   Mikko Korpela
